--- a/global.css
+++ b/global.css
@@ -13,4 +13,11 @@
 
     --border-primary: #D1D5DB;
     --border-hover: #B9C2D0;
+
+
+    --font-inter: "Inter", sans-serif;
+    --title: bold 24px/32px var(--font-inter);
+    --label: 600 16px/20px var(--font-inter);
+    --paragraph: 500 16px/20px var(--font-inter);
+    --link: 500 14px/16px var(--font-inter);
 }
