--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: var(--font-inter);
+    font: var(--paragraph);
 }
 
 .content {
@@ -25,11 +27,13 @@ header {
 }
 
 #back-button{
+    font: var(--label);
     text-decoration: none;
     color: var(--color-brand);
 }
 
 h1 {
+    font: var(--title);
     margin-top: 16px;
     margin-bottom: 44px;
 }
@@ -42,11 +46,93 @@ h1 {
     border: 2px solid var(--border-primary)
 }
 
+#input-add:hover {
+    border: 2px solid var(--border-hover);
+}
+
+#input-add:focus {
+    border-color: var(--color-brand); 
+    outline: none;
+}
+
 #button-submit {
+    font: var(--label);
+    
+    margin-left: 16px;
     color: var(--always-white);
     background-color: var(--color-brand);
-    width: 160px;
+    width: 159px;
     height: 44px;
     border-radius: 12px;
     border: none;
+    cursor: pointer;
+}
+
+#button-submit:hover {
+    background-color: var(--color-brand-hover);
+}
+
+ul {
+    padding: 0;
+    margin-top: 40px;
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+
+    width: 627px;
+    height: 49px;
+    padding: 0 16px;
+    margin-bottom: 12px;
+
+    background-color: var(--background-secondary);
+    border-radius: 12px;
+}
+
+.input-li {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    margin-right: 12px;
+    border-radius: 4px;
+    border: 1px solid var(--border-primary);
+    position: relative;
+    cursor: pointer;
+}
+
+.input-li:checked {
+    background-color: var(--color-brand); 
+    border-color: var(--color-brand);
+}
+
+.input-li:checked::after {
+    content: "✓";
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.input-li:hover {
+    border-color: var(--border-hover)
+}
+
+li span {
+    flex-grow: 1;
+    font-size: 16px;
+    color: var(--text-primary);
+}
+
+li img {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
 }
